# fastgeotoolkit

./: .gitignore  README.md
.github/: FUNDING.yml
.github/workflows/: python-tests.yml  release-package.yml  tests.py
core/: Cargo.toml  README.md
data/: gpx.py  preprocess.py  routes.gpx
data/big_gpx/: Route_10.gpx  Route_100.gpx  Route_1002.gpx  Route_1004.gpx  Route_1005.gpx  Route_1006.gpx  Route_1007.gpx  Route_101.gpx  Route_1010.gpx  Route_1011.gpx  Route_1014.gpx  Route_1015.gpx  Route_1017.gpx  Route_1019.gpx  Route_1020.gpx  Route_1022.gpx  Route_1023.gpx  Route_1024.gpx  Route_1025.gpx  Route_1029.gpx  Route_103.gpx  Route_1030.gpx  Route_1032.gpx  Route_1034.gpx  Route_1035.gpx  Route_1036.gpx  Route_1039.gpx  Route_1040.gpx  Route_1042.gpx  Route_1043.gpx  Route_1044.gpx  Route_1045.gpx  Route_1048.gpx  Route_1049.gpx  Route_1050.gpx  Route_1055.gpx  Route_1056.gpx  Route_1058.gpx  Route_1059.gpx  Route_106.gpx  (+4919 more)
data/gpx/: Route_T10.gpx  Route_T110.gpx  Route_T115.gpx  Route_T116.gpx  Route_T117.gpx  Route_T118.gpx  Route_T119.gpx  Route_T120.gpx  Route_T121.gpx  Route_T125.gpx  Route_T127.gpx  Route_T128.gpx  Route_T13.gpx  Route_T130.gpx  Route_T133.gpx  Route_T134.gpx  Route_T135.gpx  Route_T136.gpx  Route_T138.gpx  Route_T140.gpx  Route_T141.gpx  Route_T148.gpx  Route_T15.gpx  Route_T153.gpx  Route_T155.gpx  Route_T156.gpx  Route_T159.gpx  Route_T16.gpx  Route_T163.gpx  Route_T164.gpx  Route_T166.gpx  Route_T167.gpx  Route_T17.gpx  (+128 more)
demo/: _headers  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
paper/: paper.bib  paper.md
(+5534 files in other folders)
