[package]
name = "fastgeotoolkit"
version = "0.1.7"
edition = "2021"
description = "A fast and comprehensive geospatial toolkit for processing GPS tracks, trajectories, and coordinate data from GPX, FIT, and polyline formats"
license = "MIT"
repository = "https://github.com/a0a7/fastgeotoolkit"
authors = ["a0a7"]
keywords = ["gps", "geospatial", "trajectory", "fast", "toolkit"]
categories = ["wasm", "science", "visualization"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gpx = "0.10"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polyline = "0.10"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["FileReader", "Blob", "console"]
